# math_for_ml_fruit_classifier

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
docs/: CONTRIBUTING.md  DATA_GUIDE.md  TRAINING_GUIDE.md
models/: classification_report.json  history.json  labels.json
scripts/: download_kaggle_dataset_fruits360.py  evaluate.py  re_train.py  train_model.py  train_model_v2.py
src/: main.py
src/api/v1/endpoints/: predict.py
src/core/: config.py
src/models/: model_loader.py
src/schemas/: prediction_schema.py
src/services/: prediction_service.py
src/utils/: image_utils.py
test_resources/: sprint3_simple_test_api_with_postman.xlsx  sprint3_simple_test_api_with_postman_sprint_4.xlsx
